compiler/test-data/parser/contract/errors/param_missing_type.frel
module contract.errors.param_missing_type

contract UserAPI {
    get_user(id) : User
}
